--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 11pt;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+  
+  &:visited {
+    color: white;
+  }
+  &:hover {
+    color: #888;
+  }
+}
