--- a/src/components/accountbar.scss
+++ b/src/components/accountbar.scss
@@ -1,14 +1,13 @@
-.accountbar {
-  text-align: center;
+@import '../styles/colors';
 
-  .fullname {
-    display: inline-block;
+.accountbar {
+  input {
+    margin-left: 10px;
   }
 
-  .button {
+  .icon {
     display: inline-block;
-    background: red;
-    width: 20px;
-    height: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
