--- a/src/components/optiondecoder.scss
+++ b/src/components/optiondecoder.scss
@@ -5,11 +5,22 @@
         margin: 0;
         padding: 0;
         display: flex;
+        flex-flow: column;
         flex-wrap: wrap;
-
+        
         li {
             list-style-type: none;
-            margin-right: 1em;
+        
+            div {
+                display: grid;
+                grid-template-columns: 75px 350px;
+
+                .code {
+                }
+    
+                .name {
+                }
+            }
         }
     }
     
