--- a/src/components/accountbar.scss
+++ b/src/components/accountbar.scss
@@ -9,5 +9,10 @@
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
+    vertical-align: middle;
+
+    > * {
+      height: 22px;
+    }
   }
 }
