--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import './styles/colors';
 
 .app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: grid;
   grid-template-columns: auto 1fr;
